# Lidar

.devcontainer/: Dockerfile.simple  devcontainer.json
src/ground_plane_estimation/: CMakeLists.txt  README.md  package.xml  test_ground_plane_estimation.sh
src/ground_plane_estimation/config/: ground_plane_estimation.yaml
src/ground_plane_estimation/launch/: ground_plane_estimation.launch.py
src/ground_plane_estimation/rviz/: ground_plane_estimation.rviz
src/ground_plane_estimation/src/: ground_plane_estimation_node.cpp
src/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/ground_plane_estimation/lib/ground_plane_estimation/: ground_plane_estimation_node
src/install/ground_plane_estimation/share/ground_plane_estimation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/ground_plane_estimation/share/ground_plane_estimation/cmake/: ground_plane_estimationConfig.cmake
src/install/ground_plane_estimation/share/ground_plane_estimation/config/: ground_plane_estimation.yaml
src/install/ground_plane_estimation/share/ground_plane_estimation/launch/: point_lio_with_ground_estimation.launch.py
src/install/ground_plane_estimation/share/ground_plane_estimation/rviz/: ground_plane_estimation.rviz
src/install/point_lio/lib/point_lio/: pointlio_mapping
src/install/point_lio/share/point_lio/: package.bash  package.sh  package.zsh
src/install/point_lio/share/point_lio/config/: unilidar_l1.yaml
src/install/unitree_lidar_ros2/lib/unitree_lidar_ros2/: unitree_lidar_ros2_node
src/install/unitree_lidar_ros2/share/unitree_lidar_ros2/: package.bash  package.sh  package.zsh
src/install/unitree_lidar_sdk/share/unitree_lidar_sdk/: package.bash  package.zsh
src/log/: latest_build
src/rviz/: ground_plane_package.rviz  lidar_slam_intensity.rviz
