<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ground_plane_estimation</name>
  <version>0.0.0</version>
  <description>Ground plane estimation and object clustering package for ROS2. 
    This package processes point clouds from SLAM systems like Point-LIO to:
    1. Remove ground plane points based on height threshold
    2. Cluster remaining objects using Euclidean clustering
    3. Filter clusters by size to keep only objects of interest
    4. Publish results for visualization in RViz</description>
  <maintainer email="wkok@lely.com">root</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libeigen3-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
